Fix overflow horizontal for board
Add new wrapper container for devise

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,7 +1,8 @@
 // Main Container
 .full-container {
+  width: 100vh;
   padding: 0px 0px !important;
-  display: flex;
+  // display: flex;
   justify-content: center;
 }
 
